# saba_CLI

./: .gitignore  LICENSE  README.md  install.fish  pyproject.toml
completions/: saba-cli.fish
src/saba_cli/: __main__.py  cli.py  theme.py
src/saba_cli/commands/: tree.py
src/saba_cli/utils/: git.py
